--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,12 +10,21 @@ services:
     container_name: database
     image: postgres
     environment:
-      POSTGRES_DB: pruebas
+      POSTGRES_DB: test
       POSTGRES_PASSWORD: password
     volumes:
       - "./volumes_postgres:/var/lib/postgresql/data"
       - "./postgres_database/prueba.sql:/docker-entrypoint-initdb.d/prueba.sql"
-      - "./postgres_database/data_prueba.sql:/docker-entrypoint-initdb.d/data_prueba.sql"
+     # - "./postgres_database/data_prueba.sql:/docker-entrypoint-initdb.d/data_prueba.sql"
     ports:
       - '5432:5432'
+
+  frontend:
+    container_name: frontend
+    image: frontend
+    volumes:
+      - "../frontend/code:/var/www/html"
+    ports: 
+      - '9090:80'
+
     
