--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,4 @@
 services:
-  backend:
-    container_name: backend
-    image: backend
-    build: 
-      context: ./backend
-      dockerfile: Dockerfile
-    ports:
-      - '8080:80'
-
   database:
     container_name: database
     image: postgres
@@ -19,7 +10,24 @@ services:
       - "./backend/postgres_database/prueba.sql:/docker-entrypoint-initdb.d/prueba.sql"
     ports:
       - '5432:5432'
-    
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  backend:
+    container_name: backend
+    image: backend
+    build: 
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - '8080:80'
+    depends_on:
+      database:
+        condition: service_healthy
+
   frontend: 
     container_name: frontend
     image: frontend
